# trmnl-calendar

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/agent-plans/: 2026-06-13-denver-now-marker.md  2026-06-13-event-location-overflow.md  2026-06-13-local-systemd-service.md  latex-renderer-backend.md
src/trmnl_weekly_calendar/: __init__.py  calendar_data.py  external_api_log.py  month_render.py  png_encode.py  render.py  server.py  weather_data.py
tests/: test_calendar_data.py  test_external_api_log.py  test_render.py  test_server.py  test_weather_data.py
