[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trmnl-weekly-calendar"
version = "0.1.0"
description = "A 1872x1404 4-bit grayscale weekly calendar mockup for TRMNL X."
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10",
]

[project.scripts]
render-trmnl-calendar = "trmnl_weekly_calendar.render:render"
serve-trmnl-calendar = "trmnl_weekly_calendar.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
